bin_PROGRAMS=example litesql-gen
example_SOURCES=example.cpp exampledatabase.cpp exampledatabase.hpp
litesql_gen_SOURCES=litesql-gen.cpp litesql-gen-actions.cpp xmlobjects.cpp md5.cpp litesql-gen-cpp.cpp
litesql_gen_LDADD=liblitesql.a
example_LDADD=liblitesql.a
lib_LTLIBRARIES=liblitesql.la
liblitesql_la_SOURCES=database.cpp expr.cpp selectquery.cpp persistent.cpp split.cpp string.cpp backend.cpp updatequery.cpp field.cpp datasource.cpp

