EXTRA_DIST = changes.txt contributors.txt cost.txt doxygen.conf footer.html future.txt implementation.txt license.txt main.txt mysql_notes.txt usage_cursor.txt usage_database_create_drop.txt usage_defining_database.txt usage_selecting_persistents.txt usage_upcasting.txt usage_update_delete_persistents.txt usage_using_database.txt usage_using_relations.txt

