AM_CXXFLAGS=-I../../include
bin_PROGRAMS=litesql-gen
litesql_gen_SOURCES=litesql-gen.cpp litesql-gen-actions.cpp xmlobjects.cpp md5.cpp litesql-gen-cpp.cpp litesql-gen-main.cpp litesql-gen-main.hpp xmlobjects.hpp md5.hpp litesql-gen.hpp cppgenerator.hpp xmlobjects.hpp
litesql_gen_LDADD=../library/liblitesql.la


