AM_CXXFLAGS=-I$(srcdir)/../../include
bin_PROGRAMS=litesql-gen
litesql_gen_SOURCES=litesql-gen.cpp litesql-gen-actions.cpp xmlobjects.cpp md5.cpp litesql-gen-cpp.cpp litesql-gen-cpp.hpp litesql-gen-python.cpp litesql-gen-python.hpp litesql-gen-main.cpp litesql-gen-main.hpp xmlobjects.hpp md5.hpp litesql-gen.hpp cppgenerator.hpp xmlobjects.hpp litesql-gen-graphviz.hpp litesql-gen-graphviz.cpp
litesql_gen_LDADD=../library/liblitesql.la


