AM_CXXFLAGS=-I$(srcdir)/../../include -I$(srcdir)/../libxmlreader
bin_PROGRAMS=litesql-gen
litesql_gen_SOURCES=litesql-gen-cpp.cpp litesql-gen-cpp.hpp litesql-gen-python.cpp litesql-gen-python.hpp litesql-gen-main.cpp cppgenerator.hpp litesql-gen-graphviz.hpp litesql-gen-graphviz.cpp common.hpp args.hpp common.cpp args.cpp
litesql_gen_LDADD=../library/liblitesql.la ../libxmlreader/liblitesql-xmlreader.la


