AM_CXXFLAGS=-I../../include
noinst_PROGRAMS=test-split test-selectquery test-datetime
test_split_SOURCES=test-split.cpp
test_split_LDADD=../library/liblitesql.la
test_selectquery_SOURCES=test-selectquery.cpp
test_selectquery_LDADD=../library/liblitesql.la
test_datetime_SOURCES=test-datetime.cpp testdb.cpp
test_datetime_LDADD=../library/liblitesql.la
